--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5104",
+      "applicationUrl": "http://localhost:5104/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7185;http://localhost:5104",
+      "applicationUrl": "https://localhost:7185/;http://localhost:5104/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
